--- a/ClinicaWeb/JyGDreams/templates/detail_expediente.html
+++ b/ClinicaWeb/JyGDreams/templates/detail_expediente.html
@@ -32,7 +32,7 @@
   <!-- HISTORIAL DE CITAS -->
   <div class="card p-4 shadow-sm mb-4">
     <h5 class="fw-bold text-success mb-3">
-      <i class="bi bi-calendar2-heart-fill me-2"></i>Historial de Citas
+      <i class="bi bi-calendar-week me-2"></i>Historial de Citas
     </h5>
     <button type="button" class="btn btn-primary shadow-sm rounded-pill px-4 py-2 d-flex align-items-center gap-2" data-bs-toggle="modal" data-bs-target="#modalHistorialCitas">
       <i class="bi bi-calendar-check fs-5"></i> <span class="fw-semibold">Ver Historial de Citas Realizadas</span>
@@ -131,7 +131,7 @@
     <div class="modal-content">
       <div class="modal-header bg-success text-white">
         <h5 class="modal-title fw-bold" id="modalHistorialCitasLabel">
-          <i class="bi bi-calendar2-heart-fill me-2"></i>Historial de Citas Realizadas - {{ expediente.paciente.nombre }} {{ expediente.paciente.apellido }}
+          <i class="bi bi-calendar-week me-2"></i>Historial de Citas Realizadas - {{ expediente.paciente.nombre }} {{ expediente.paciente.apellido }}
         </h5>
         <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
@@ -173,7 +173,7 @@
         {% endif %}
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+        <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
       </div>
     </div>
   </div>
