--- a/ClinicaWeb/JyGDreams/templates/edit_patient.html
+++ b/ClinicaWeb/JyGDreams/templates/edit_patient.html
@@ -12,7 +12,7 @@
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4 gap-3">
     <h2><i class="bi bi-person-plus-fill me-2"></i>Editar Paciente</h2>
     <a href="{% url 'tabla_paciente' %}" class="btn btn-primary">
-      <i class="bi bi-table"></i> Ver Pacientes
+      <i class="bi bi-table"></i> Regresar a la lista de pacientes
     </a>
   </div>
 
