--- a/ClinicaWeb/JyGDreams/templates/detail_cita.html
+++ b/ClinicaWeb/JyGDreams/templates/detail_cita.html
@@ -11,7 +11,7 @@
   <div class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-4 gap-3">
     <h2><i class="bi bi-calendar-check me-2"></i>Detalle de Cita de {{ cita.paciente.nombre }} {{ cita.paciente.apellido }}</h2>
     <a href="{% url 'home_citas' cita.paciente.id %}" class="btn btn-primary">
-      <i class="bi bi-table"></i> Ver Citas
+      <i class="bi bi-table"></i> Regresar a Citas
     </a>
   </div>
 
